Trabajamos con Scroll snap slide

--- a/scroll-one-page.html
+++ b/scroll-one-page.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/scroll-one-page.css">
-  <title>Efectos de Scroll (Desplazamientos)</title>
+  <title>Efectos con Scroll (Desplazamientos)</title>
 </head>
 
 <body>
