--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <li><a href="forms.html">Formularios en CSS</a></li>
       <li><a href="visual-efects.html">Efectos Visuales en CSS</a></li>
       <li><a href="scroll-one-page.html">Efectos con Scroll(<small>Sitio one Page</small>)</a></li>
-      <li><a href=""></a></li>
+      <li><a href="scroll-snap-slides.html">Ajustes del Scroll (<small>Slides</small>)</a></li>
       <li><a href=""></a></li>
     </ul>
   </article>
