Trabaje en Movimientos en CSS

--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
       <li><a href="visual-efects.html">Efectos Visuales en CSS</a></li>
       <li><a href="scroll-one-page.html">Efectos con Scroll(<small>Sitio one Page</small>)</a></li>
       <li><a href="scroll-snap-slides.html">Ajustes del Scroll (<small>Slides</small>)</a></li>
+      <li><a href="motion.html">Movimientos en CSS</a></li>
+      <li><a href=""></a></li>
+      <li><a href=""></a></li>
       <li><a href=""></a></li>
     </ul>
   </article>
