--- a/scroll-snap-slides.html
+++ b/scroll-snap-slides.html
@@ -14,15 +14,41 @@
   <main class="slides">
     <section class="slide">
       <article class="slide-container">
-        <h1>Ajustes del Scroll (<small>Slides</small>)</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt voluptatum deserunt doloremque asperiores
-          architecto aspernatur officiis, perferendis omnis, corporis expedita, quos accusamus necessitatibus vero sequi
-          hic. Ad cupiditate magni ipsam.</p>
+        <h1 class="gradien-text">Ajustes del Scroll (<small>Slides</small>)</h1>
+        <section class="carousel">
+          <div class="carousel-container">
+            <article class="carousel-slide">
+              <div class="carousel-slide-content">
+                <h3>Side 1</h3>
+              </div>
+            </article>
+            <article class="carousel-slide">
+              <div class="carousel-slide-content">
+                <h3>Side 2</h3>
+              </div>
+            </article>
+            <article class="carousel-slide">
+              <div class="carousel-slide-content">
+                <h3>Side 3</h3>
+              </div>
+            </article>
+            <article class="carousel-slide">
+              <div class="carousel-slide-content">
+                <h3>Side 4</h3>
+              </div>
+            </article>
+            <article class="carousel-slide">
+              <div class="carousel-slide-content">
+                <h3>Side 5</h3>
+              </div>
+            </article>
+          </div>
+        </section>
         <a href="index.html#temario-css">Algoritmo en css ☝️ </a>
       </article>
     </section>
     <section class="slide">
-      <article class="slide-container">
+      <article class="slide-container gradien-text">
         <h2>Slide 2</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates nostrum sapiente hic beatae culpa quas
           quaerat molestiae nam possimus eos quae veritatis, nemo accusantium harum ipsam voluptatibus natus? Iusto,
@@ -30,7 +56,7 @@
       </article>
     </section>
     <section class="slide">
-      <article class="slide-container">
+      <article class="slide-container gradien-text">
         <h2>Slide 3</h2>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis repellat labore, minus tenetur maiores
           officiis nostrum dicta voluptatum tempora illo neque molestiae excepturi similique et adipisci deleniti
