--- a/motion.html
+++ b/motion.html
@@ -23,7 +23,17 @@
     </article>
   </section>
   <hr>
-  <h2>Transformaciones</h2>
+  <section class="transforms">
+    <h2>Transformaciones</h2>
+    <h3>Transformaciones en 2D</h3>
+    <article class="card transform-2D">
+      <img src="assets/puesta-sol.jpg" alt="Puesta de sol">
+    </article>
+    <h3>Transformaciones en 3D</h3>
+    <article class="card transform-3D">
+      <img src="assets/puesta-sol.jpg" alt="Puesta de sol">
+    </article>
+  </section>
   <hr>
   <h2>Animaciones</h2>
   <hr>
