Cubo de Rubyk en 3D

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <li><a href="scroll-one-page.html">Efectos con Scroll(<small>Sitio one Page</small>)</a></li>
       <li><a href="scroll-snap-slides.html">Ajustes del Scroll (<small>Slides</small>)</a></li>
       <li><a href="motion.html">Movimientos en CSS</a></li>
-      <li><a href=""></a></li>
+      <li><a href="cubo-rubik.html">Cubo de Rubyk</a></li>
       <li><a href=""></a></li>
       <li><a href=""></a></li>
     </ul>
