Cubo con Imagenes

--- a/cubo-rubik.html
+++ b/cubo-rubik.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="css/cubo-rubyk.css">
 </head>
 
-<body>
+<body class="bodyCubo">
   <h1>Cubo de Rubik en CSS</h1>
   <div class="contenedor">
     <div class="cubo">
@@ -84,7 +84,11 @@
     </div>
   </div>
   <hr>
-  <a href="index.html#temario-css">Algoritmo en css ☝️ </a>
+  <footer>
+    <div class="a">
+      <a href="index.html#temario-css">Algoritmo en css ☝️ </a>
+    </div>
+  </footer>
 </body>
 
 </html>
