--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <li><a href="scroll-snap-slides.html">Ajustes del Scroll (<small>Slides</small>)</a></li>
       <li><a href="motion.html">Movimientos en CSS</a></li>
       <li><a href="cubo-rubik.html">Cubo de Rubyk</a></li>
-      <li><a href=""></a></li>
+      <li><a href="ejercicio-rubyk.html">Ejercicio de imagenes con el cubo en CSS</a></li>
       <li><a href=""></a></li>
     </ul>
   </article>
