Trabajo en animaciones

--- a/motion.html
+++ b/motion.html
@@ -33,9 +33,38 @@
     <article class="card transform-3D">
       <img src="assets/puesta-sol.jpg" alt="Puesta de sol">
     </article>
+    <h3>Origen de la Transformacion</h3>
+    <article class="card transform-origin">
+      <img src="assets/puesta-sol.jpg" alt="Puesta de sol">
+    </article>
+    <h3>Flip Cards</h3>
+    <article class="flip-card-1">
+      <div class="flip-face flip-front">
+        <img src="assets/puesta-sol.jpg" alt="Puesta de sol">
+      </div>
+      <div class="flip-face flip-back">
+        <img src="assets/BuenosDias.jpg" alt="Puesta de sol">
+      </div>
+    </article>
+    <article class="flip-card-2">
+      <div class="flip-face flip-front">
+        <img src="assets/puesta-sol.jpg" alt="Puesta de sol">
+      </div>
+      <div class="flip-face flip-back">
+        <img src="assets/BuenosDias.jpg" alt="Puesta de sol">
+      </div>
+    </article>
   </section>
   <hr>
-  <h2>Animaciones</h2>
+  <section class="animations">
+    <h2>Animaciones</h2>
+    <article class="card my-animation">
+      <img src="assets/BuenosDias.jpg" alt="Buenos Dias">
+    </article>
+    <article class="card my-animation-2">
+      <img src="assets/BuenosDias.jpg" alt="Buenos Dias">
+    </article>
+  </section>
   <hr>
   <a href="index.html#temario-css">Algoritmo en css ☝️ </a>
 </body>
