Ejemplo de efecto de Movimiento en CSS

--- a/motion.html
+++ b/motion.html
@@ -64,9 +64,36 @@
     <article class="card my-animation-2">
       <img src="assets/BuenosDias.jpg" alt="Buenos Dias">
     </article>
+    <article class="card animation-multiple">
+      <img src="assets/BuenosDias.jpg" alt="Buenos Dias">
+    </article>
   </section>
   <hr>
-  <a href="index.html#temario-css">Algoritmo en css ☝️ </a>
+  <section class="motion-examples">
+    <h2>Ejemplos de efecto de movimiento en CSS</h2>
+    <h3>FadeIn/FadeOut</h3>
+    <div class="fade-in">😊</div>
+    <div class="fade-out">😊</div>
+    <h3>Sacudir</h3>
+    <div class="shake">☕</div>
+    <h3>Pulsaciones</h3>
+    <div class="pulse">❤️</div>
+    <div class="pulse">😺 KENAY 😺</div>
+    <h3>Dibujando y animando con CSS</h3>
+    <h4>Corazon</h4>
+    <div class="pulse">Heres el CSS de mi HTML</div>
+    <div class="heart"></div>
+    <h4>Spinner/Loader</h4>
+    <div class="spinner"></div>
+    <h3>Botones Animados</h3>
+    <button class="btn anim-button to-left">Animacion Izquierda</button>
+    <button class="btn anim-button to-center">Animacion Centro</button>
+    <button class="btn anim-button to-right">Animacion Derecha</button>
+    <button class="btn anim-bg-gradient">Fondo con Gradiente</button>
+  </section>
+  <hr>
+  <a href="index.html#temario-css">Algoritmo en css ☝️
+  </a><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 </body>
 
 </html>
