Boton de amburgesas

--- a/motion.html
+++ b/motion.html
@@ -90,6 +90,30 @@
     <button class="btn anim-button to-center">Animacion Centro</button>
     <button class="btn anim-button to-right">Animacion Derecha</button>
     <button class="btn anim-bg-gradient">Fondo con Gradiente</button>
+    <h3>Menu de Pestañas(Tabs)</h3>
+    <nav class="tabs-menu">
+      <input type="radio" id="tab-1" name="tabs">
+      <label for="tab-1">Seccion 1</label>
+      <input type="radio" id="tab-2" name="tabs">
+      <label for="tab-2">Seccion 2</label>
+      <input type="radio" id="tab-3" name="tabs">
+      <label for="tab-3">Seccion 3</label>
+      <input type="radio" id="tab-4" name="tabs">
+      <label for="tab-4">Seccion 4</label>
+      <div class="tab-bg-hover"></div>
+    </nav>
+    <h3>Menu Off Canvas</h3>
+    <input type="checkbox" class="off-canvas-btn">
+    <label class="off-canvas-burger"></label>
+    <nav class="off-canvas-menu">
+      <div class="off-canvas-menu-container">
+        <a href="#" class="off-canvas-link">Sección 1</a>
+        <a href="#" class="off-canvas-link">Sección 2</a>
+        <a href="#" class="off-canvas-link">Sección 3</a>
+        <a href="#" class="off-canvas-link">Sección 4</a>
+        <a href="#" class="off-canvas-link">Sección 5</a>
+      </div>
+    </nav>
   </section>
   <hr>
   <a href="index.html#temario-css">Algoritmo en css ☝️
