Ejercicios de FlexBox

--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
       <li><a href="motion.html">Movimientos en CSS</a></li>
       <li><a href="cubo-rubik.html">Cubo de Rubyk</a></li>
       <li><a href="ejercicio-rubyk.html">Ejercicio de imagenes con el cubo en CSS</a></li>
+      <li><a href="flex-box.html">Flex Box en CSS</a></li>
+      <li><a href="ejercicios-flexBox.html">Ejercicios de Flex-Box en CSS Boostrap</a></li>
+      <li><a href="ejercicio-flexBox-Artesanal.html">FlexBox Grip Artesanal</a></li>
       <li><a href=""></a></li>
     </ul>
   </article>
