--- a/motion.html
+++ b/motion.html
@@ -114,6 +114,52 @@
         <a href="#" class="off-canvas-link">Sección 5</a>
       </div>
     </nav>
+    <h3>Ventana Modal</h3>
+    <a href="#modal-1">Abrir Modal</a>
+    <article id="modal-1" class="modal">
+      <div class="modal-container">
+        <a href="#cerrar" class="modal-close">X</a>
+        <h2>Esto es una Clase Modal</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla tempore perspiciatis cupiditate ab veritatis
+          exercitationem excepturi facere aspernatur ut necessitatibus. Aperiam vero nobis modi, qui quo magnam ab rem
+          eveniet!</p>
+        <ul>
+          <li><a href="">Enlace</a></li>
+          <li><a href="">Enlace</a></li>
+          <li><a href="">Enlace</a></li>
+          <li><a href="">Enlace</a></li>
+          <li><a href="">Enlace</a></li>
+          <li><a href="">Enlace</a></li>
+        </ul>
+      </div>
+    </article>
+    <h3>Star Wars Intro</h3>
+    <article class="star-wars">
+      <div class="star-wars-container">
+        <h2>Episode III</h2>
+        <h3>REVENGE OF THE SITH</h3>
+        <p>War! The Republic is crumbling
+          under attacks by the ruthless
+          Sith Lord, Count Dooku.
+          There are heroes on both sides.
+          Evil is everywhere.</p>
+
+        <p>In a stunning move, the
+          fiendish droid leader, General
+          Grievous, has swept into the
+          Republic capital and kidnapped
+          Chancellor Palpatine, leader of
+          the Galactic Senate.</p>
+
+        <p>As the Separatist Droid Army
+          attempts to flee the besieged
+          capital with their valuable
+          hostage, two Jedi Knights lead a
+          desperate mission to rescue the
+          captive Chancellor....</p>
+
+      </div>
+    </article>
   </section>
   <hr>
   <a href="index.html#temario-css">Algoritmo en css ☝️
