Centrado de texto, Stiky footer, encabezado

--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
       <li><a href="flex-box.html">Flex Box en CSS</a></li>
       <li><a href="ejercicios-flexBox.html">Ejercicios de Flex-Box en CSS Boostrap</a></li>
       <li><a href="ejercicio-flexBox-Artesanal.html">FlexBox Grip Artesanal</a></li>
+      <li><a href="ejemplos-practicos-flexbox.html">Ejemplos Practicos Flexbox</a></li>
+      <li><a href=""></a></li>
+      <li><a href=""></a></li>
       <li><a href=""></a></li>
     </ul>
   </article>
