--- a/index-4-Boostrap.html
+++ b/index-4-Boostrap.html
@@ -98,6 +98,7 @@
         </article>
         <article class="col-12 col-lg-6">
           <img src="http://placeimg.com/400/400/nature" class="img-fluid">
+          <!-- class="img-fluid"La imagen se buelve responsiva -->
         </article>
       </section>
     </div>
