--- a/box-model.html
+++ b/box-model.html
@@ -30,7 +30,7 @@
   <h2>Cajas de Linea vs Cajas de Bloque</h2>
   <span class="caja-linea">Esto es una caja de linea</span>
   <span>Esto es una span</span>
-  <div class="caja-bloque">Esto es una cja bloque</div>
+  <div class="caja-bloque">Esto es una caja bloque</div>
   <hr>
   <hr>
   <h2>Propiedad Display</h2>
@@ -115,7 +115,7 @@
     <section class="float-right">Este Elemento flota a la Derecha</section>
     <section class="float-left">Este elemento flota a la izquierda</section>
   </article>
-  <div class="clearfix"></div>
+  <div class="clearfix"></div><!-- div bacia para arreglar el problema de los elementos flotados -->
   <section class=""> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea eligendi at provident eius
     voluptatum saepe tempore exercitationem obcaecati illum quo tenetur laboriosam error dolor expedita debitis,
     similique maxime enim nesciunt.
