--- a/position.html
+++ b/position.html
@@ -15,14 +15,15 @@
   <div class="relative">Caja Relativa</div>
   <div class="absolute">Caja Absoluta</div>
   <section class="relative-parent">
-    <div class="absolute-chid">
+    <div class="absolute-child">
       Caja Absoluta con Ancestro Relativo
     </div>
   </section>
   <div class="fixed">Caja Fija</div>
-  <div class="sticky">Caja Pegajosa como Hijo</div>
+  <div class="fixed-2">Caja Fija 2 FIXED</div>
+  <div class="sticky">Caja Pegajosa</div>
   <section class="sticky-parent">
-    <div class="sticky-chid">Caja Pegajosa</div>
+    <div class="sticky-chid">Caja Pegajosa como HIJO</div>
   </section>
   <br>
   <hr>
@@ -30,8 +31,9 @@
   <div class="z-index-2">Provando z-index Caja 2</div>
   <section class="z-index-parent">
     <div class="z-index-child">
-      Hijo z-index
+      Hijo z-index child
     </div>
+    <p>Contenedor padre</p>
   </section>
   <br>
   <hr>
